@@ -24,6 +24,8 @@
 * Improved option to open folder in terminal, it should work with gvfs
     paths that have resolvable local path as well.
 
+* Fixed incorrect file names rendering position on the desktop.
+
 
 Changes on 1.2.3 since 1.2.2:
 
